Corrected column spacing @ Python generation

--- a/css/css-latex/style.css
+++ b/css/css-latex/style.css
@@ -742,12 +742,16 @@ h6 {
   font-weight: normal;
 }
 .columns {
-    display: flex;
-    justify-content: space-around;
+    display: flex;            
+    justify-content: flex-start;
+    justify-content: center;
+    gap: 90px;               
 }
+
 .column {
-    list-style-type: none;
-    padding: 0;
+    list-style-type: none;   
+    padding: 0;              
+    margin: 0;  
 }
 .video-container {
    position: relative;
